@@ -14,8 +14,13 @@ Devin J. Pohly in structuring the code to enable this peaceful transition.)
 
 Version 3.2.0 - in development
 ------------------------------
-- Discontinued support for Python 3.6, 3.7, and 3.8. Reworked portions of the
-  packrat cache to leverage insertion-preserving ordering in dicts.
+- Discontinued support for Python 3.6, 3.7, and 3.8. Adopted new Python features from
+  Python versions 3.7-3.9:
+  - Updated type annotations to use built-in container types instead of names
+    imported from the `typing` module (e.g., `list[str]` vs `List[str]`).
+  - Reworked portions of the packrat cache to leverage insertion-preserving ordering
+    in dicts.
+  - Changed `pdb.set_trace()` call in `ParserElement.set_break()` to `breakpoint()`.
 
 - Fixed code in `ParseElementEnhance` subclasses that replaced detailed
   exception messages raised in contained expressions with a less-specific and
